dynamic date added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <div class="flex justify-center mt-5">
-            <button class="text-white font-mono font-extrabold bg-red-500 p-3 rounded-xl ">Sort By Date</button>
+            <button class="text-white font-mono font-extrabold bg-red-500 p-3 rounded-xl " onclick="sortBtnHandler()">Sort By Date</button>
         </div>
         <section class="my-6 space-y-14 container mx-auto">
                         
