show all button working

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
         
         <div class="flex justify-center">
-            <button class="text-white font-mono font-extrabold bg-red-500 p-3 rounded-xl ">Sort By Date</button>
+            <button class="text-white font-mono font-extrabold bg-red-500 p-3 rounded-xl " onclick="seeAllHandler()">See all</button>
         </div>
 
     </body>
